[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/sprites/swish.png" type="Texture" id=1]
[ext_resource path="res://src/prefabs/Collisions/SoftCollision.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/prefabs/Collisions/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/prefabs/Collisions/PlayerDetection.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/prefabs/Collisions/WanderController.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/prefabs/Collisions/HitBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/prefabs/Projectiles/ProjectileStats.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/prefabs/Projectiles/SwishProjectile.gd" type="Script" id=8]
[ext_resource path="res://assets/shaders/flash_shader.gdshader" type="Shader" id=9]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 9 )
shader_param/active = false
shader_param/export_color = Vector3( 1, 1, 1 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=15]
radius = 2.0
height = 16.0

[sub_resource type="CapsuleShape2D" id=16]
radius = 1.0
height = 16.0

[sub_resource type="CircleShape2D" id=10]
radius = 0.0

[sub_resource type="CapsuleShape2D" id=17]
radius = 3.99998
height = 16.0

[sub_resource type="CircleShape2D" id=12]
radius = 0.0

[sub_resource type="Animation" id=13]
resource_name = "Flash"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=14]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Projectile" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 8 )

[node name="Sprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
frames = SubResource( 7 )
playing = true
offset = Vector2( 0, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
rotation = -1.57079
shape = SubResource( 15 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, 4 )
rotation = -1.57079
shape = SubResource( 16 )

[node name="PlayerDetection" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 0, 4 )
shape = SubResource( 10 )

[node name="HitBox" parent="." instance=ExtResource( 6 )]
collision_mask = 8
damage = 5

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, 4 )
rotation = -1.57079
shape = SubResource( 17 )

[node name="SoftCollision" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, 4 )
shape = SubResource( 12 )

[node name="WanderController" parent="." instance=ExtResource( 5 )]
wander_range = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flash = SubResource( 13 )
anims/Stop = SubResource( 14 )

[node name="Stats" parent="." instance=ExtResource( 7 )]
max_health = 30
exp_reward_base = 0

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="invincibility_ended" from="HurtBox" to="." method="_on_HurtBox_invincibility_ended"]
[connection signal="invincibility_started" from="HurtBox" to="." method="_on_HurtBox_invincibility_started"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="HurtBox"]
[editable path="PlayerDetection"]
[editable path="HitBox"]
[editable path="SoftCollision"]
